src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Initial_Solution_Response__c</fullName>
        <label>Initial Solution Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <label>Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>legalzoom</fullName>
                </value>
                <value>
                    <fullName>legalzoom2</fullName>
                </value>
                <value>
                    <fullName>proxilaw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Team__c</fullName>
        <description>Use for metrics on action items by team</description>
        <label>Internal Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsHasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check Case email has attachment file.</description>
        <label>IsHasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Updated_By_USPTO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Updated By USPTO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>language of the product the customer purchased</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Escalation_Date__c</fullName>
        <label>Legacy Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_Name__c</fullName>
        <label>Legacy Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Reference_Number__c</fullName>
        <description>Legacy incident number from RightNow.</description>
        <inlineHelpText>This is the reference number assigned to cases by RighNow. This field will only be populated for cases imported from RightNow.</inlineHelpText>
        <label>RightNow Reference Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_Level_1__c</fullName>
        <label>Legacy Source Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Import Tools</fullName>
                </value>
                <value>
                    <fullName>Public API</fullName>
                </value>
                <value>
                    <fullName>CRM Console</fullName>
                </value>
                <value>
                    <fullName>End-User pages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Source_Level_2__c</fullName>
        <label>Legacy Source Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Techmail - Service Mailbox</fullName>
                </value>
                <value>
                    <fullName>Contact Import</fullName>
                </value>
                <value>
                    <fullName>Public XML API</fullName>
                </value>
                <value>
                    <fullName>Incident Editor</fullName>
                </value>
                <value>
                    <fullName>Ask A Question</fullName>
                </value>
                <value>
                    <fullName>Feedback on Answers</fullName>
                </value>
                <value>
                    <fullName>Create login</fullName>
                </value>
                <value>
                    <fullName>Contact Editor</fullName>
                </value>
                <value>
                    <fullName>RightNow Live Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Open_Cases_Assigned_User__c</fullName>
        <description>this field allows the user to view their open or closed cases list view from the assigned user field.</description>
        <formula>if(Assigned_User__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Open Cases - Assigned User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Open_Cases_Owner__c</fullName>
        <formula>if( OwnerId =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Open Cases - Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Inbound_Emails__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the number of inbound emails on a case</description>
        <label>Number Inbound Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_in_queue__c</fullName>
        <formula>Floor((Now() - Date_Time_Last_Queue_Assigned__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days in queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <description>used for reassigning the user to the original owner when sending an email after save as draft</description>
        <label>Old Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Manager number. Cloud Trigger coded this field to open a new window and look up the order in order manager.</description>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Date order was submitted in Order Manager</description>
        <label>Order Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originally_Escalated__c</fullName>
        <description>Updated by a WFR.</description>
        <inlineHelpText>The agent who originally changed the Status to Escalated.</inlineHelpText>
        <label>Originally Escalated</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_QC_Revision_Errors__c</fullName>
        <label>Other QC Revision Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overdue_Call_Back__c</fullName>
        <formula>IF(AND(ISBLANK(  Date_Time_Manager_Call_Back_Complete__c), Date_Time_Call_Back_Target__c &lt; NOW()), IMAGE( &quot;/servlet/servlet.FileDownload?file=015G0000006Sc1T&quot;, &quot;image from Documents tab&quot;),null)</formula>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Email_Report__c</fullName>
        <formula>IF( Date_Time_Manager_Call_Back_Complete__c &gt;Date_Time_Call_Back_Target__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POR_Email_Status__c</fullName>
        <label>POR Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Email Sent</fullName>
                </value>
                <value>
                    <fullName>2nd Email Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1800Accountant</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Sam&apos;s Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Problem_resolution__c</fullName>
        <description>used for reporting</description>
        <label>Previous Problem resolution</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Order_Other_Reason__c</fullName>
        <inlineHelpText>Max 50 Characters</inlineHelpText>
        <label>Problem Order Other Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Order_Resolution__c</fullName>
        <label>Problem Order Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Unresolved – Initial Email Sent</fullName>
                </value>
                <value>
                    <fullName>Unresolved – 2nd Email Sent</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Customer Submitting Revision</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Customer did not have the needed information</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Call attempted and customer not reached (disconnected/VM)</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Email Sent &amp; Response Pending</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Internal LZ research required</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Unauthorized Contact</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Other</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Auto Closed</fullName>
                </value>
                <value>
                    <fullName>Resolved – Revision Placed on LZ.com</fullName>
                </value>
                <value>
                    <fullName>Resolved – Placed Revision for Customer</fullName>
                </value>
                <value>
                    <fullName>Resolved – Proofer Updated</fullName>
                </value>
                <value>
                    <fullName>Resolved – New Information Provided</fullName>
                </value>
                <value>
                    <fullName>Resolved – Customer Wants to Proceed “As Is”</fullName>
                </value>
                <value>
                    <fullName>Resolved – Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Resolved – Not a Problem</fullName>
                </value>
                <value>
                    <fullName>Resolved – Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Order_Resolved_By__c</fullName>
        <label>Problem Order Resolved By:</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Order_Type__c</fullName>
        <label>Problem Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Number__c</fullName>
        <externalId>true</externalId>
        <label>Processing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <description>Complete list of products from Order Manager. May contain Legacy products.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Attorney Consultation Requests</fullName>
                </value>
                <value>
                    <fullName>Attorney Prepared Provisional Patent</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Advantage Pro Standalone</fullName>
                </value>
                <value>
                    <fullName>Bylaws &amp; Resolutions</fullName>
                </value>
                <value>
                    <fullName>Certificate of Good Standing</fullName>
                </value>
                <value>
                    <fullName>Certified Copies</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar Renewal</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Corporate Dissolution</fullName>
                </value>
                <value>
                    <fullName>Corporate Minutes</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Design Patent</fullName>
                </value>
                <value>
                    <fullName>Divorce</fullName>
                </value>
                <value>
                    <fullName>EIN Obtainment</fullName>
                </value>
                <value>
                    <fullName>Entity Name Availability Check</fullName>
                </value>
                <value>
                    <fullName>Entity Name Reservation</fullName>
                </value>
                <value>
                    <fullName>Foreign Qualification</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>General Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Immigration - Citizenship</fullName>
                </value>
                <value>
                    <fullName>Immigration - Greencards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Order Manager Product Categories</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Formations</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Legal Forms</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Order Manager Product list</description>
        <inlineHelpText>Use this to indicate a product that the customer is calling about.</inlineHelpText>
        <label>Products - Wrong Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Attorney Consultation Requests</fullName>
                </value>
                <value>
                    <fullName>Attorney Prepared Provisional Patent</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Advantage Pro Standalone</fullName>
                </value>
                <value>
                    <fullName>Bylaws &amp; Resolutions</fullName>
                </value>
                <value>
                    <fullName>Certificate of Good Standing</fullName>
                </value>
                <value>
                    <fullName>Certified Copies</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar Renewal</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Corporate Dissolution</fullName>
                </value>
                <value>
                    <fullName>Corporate Minutes</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Design Patent</fullName>
                </value>
                <value>
                    <fullName>Divorce</fullName>
                </value>
                <value>
                    <fullName>EIN Obtainment</fullName>
                </value>
                <value>
                    <fullName>Entity Name Availability Check</fullName>
                </value>
                <value>
                    <fullName>Entity Name Reservation</fullName>
                </value>
                <value>
                    <fullName>Foreign Qualification</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>General Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Immigration - Citizenship</fullName>
                </value>
                <value>
                    <fullName>Immigration - Greencards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QC_Errors_Identified_By__c</fullName>
        <label>QC Errors Identified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Revision_Errors__c</fullName>
        <label>QC Revision Errors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Docs do not require customer signature</fullName>
                </value>
                <value>
                    <fullName>Docs not prepared</fullName>
                </value>
                <value>
                    <fullName>Internal/External Order #</fullName>
                </value>
                <value>
                    <fullName>No attachment</fullName>
                </value>
                <value>
                    <fullName>No email body</fullName>
                </value>
                <value>
                    <fullName>No Order #</fullName>
                </value>
                <value>
                    <fullName>Old LZ address</fullName>
                </value>
                <value>
                    <fullName>Spelling/Grammar</fullName>
                </value>
                <value>
                    <fullName>Wrong attachment</fullName>
                </value>
                <value>
                    <fullName>Wrong Order #</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Description__c</fullName>
        <description>used in the web to case form</description>
        <label>Question (Description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>Queue field</description>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biz 501c3</fullName>
                </value>
                <value>
                    <fullName>Biz Alt Names</fullName>
                </value>
                <value>
                    <fullName>Biz Escalation</fullName>
                </value>
                <value>
                    <fullName>Biz HA Sweeps</fullName>
                </value>
                <value>
                    <fullName>Biz QC Approval</fullName>
                </value>
                <value>
                    <fullName>BIZ RA SOP</fullName>
                </value>
                <value>
                    <fullName>CC Biz</fullName>
                </value>
                <value>
                    <fullName>CC IP</fullName>
                </value>
                <value>
                    <fullName>CC Manager Call-Back</fullName>
                </value>
                <value>
                    <fullName>CC Mock Launch Requests</fullName>
                </value>
                <value>
                    <fullName>CC PS</fullName>
                </value>
                <value>
                    <fullName>IP Copyright Billing Updates</fullName>
                </value>
                <value>
                    <fullName>IP Copyright Materials</fullName>
                </value>
                <value>
                    <fullName>IP Copyright Order Updates</fullName>
                </value>
                <value>
                    <fullName>IP Copyright Post Filing</fullName>
                </value>
                <value>
                    <fullName>IP Copyrights</fullName>
                </value>
                <value>
                    <fullName>IP Partners and Firms</fullName>
                </value>
                <value>
                    <fullName>IP Patent Billing Updates</fullName>
                </value>
                <value>
                    <fullName>IP Patent Drawings</fullName>
                </value>
                <value>
                    <fullName>IP Patent Materials</fullName>
                </value>
                <value>
                    <fullName>IP Patent Order Updates</fullName>
                </value>
                <value>
                    <fullName>IP Patent Search Approval</fullName>
                </value>
                <value>
                    <fullName>IP Patents</fullName>
                </value>
                <value>
                    <fullName>IP Trademark Billing Updates</fullName>
                </value>
                <value>
                    <fullName>IP Trademark Monitoring</fullName>
                </value>
                <value>
                    <fullName>IP Trademark Order Updates</fullName>
                </value>
                <value>
                    <fullName>IP Trademark Search</fullName>
                </value>
                <value>
                    <fullName>IP Trademark Search Approvals</fullName>
                </value>
                <value>
                    <fullName>IP Trademarks</fullName>
                </value>
                <value>
                    <fullName>IP Trademarks Goods and Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason1_Sub__c</fullName>
        <description>list of possible reasons the customer would call us.</description>
        <label>Reason For Contact</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoner</fullName>
                </value>
                <value>
                    <fullName>Access Corp Center</fullName>
                </value>
                <value>
                    <fullName>Access Legal Form</fullName>
                </value>
                <value>
                    <fullName>Access My Account</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Add an Item (add ons)</fullName>
                </value>
                <value>
                    <fullName>Add Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Alt Names</fullName>
                </value>
                <value>
                    <fullName>AS Subscription Help Info</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BBB call back</fullName>
                </value>
                <value>
                    <fullName>Biz Name Check</fullName>
                </value>
                <value>
                    <fullName>Bridge Letter Request</fullName>
                </value>
                <value>
                    <fullName>Bundles</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Reach Attorney</fullName>
                </value>
                <value>
                    <fullName>Cancel Business Advantage Pro</fullName>
                </value>
                <value>
                    <fullName>Cancel Entire Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Legal Advantage Pro</fullName>
                </value>
                <value>
                    <fullName>Cancel Registered Agent (RA)</fullName>
                </value>
                <value>
                    <fullName>Cancel Specific add ons</fullName>
                </value>
                <value>
                    <fullName>Change address</fullName>
                </value>
                <value>
                    <fullName>Change billing information</fullName>
                </value>
                <value>
                    <fullName>Change Contact Info</fullName>
                </value>
                <value>
                    <fullName>Change Login email</fullName>
                </value>
                <value>
                    <fullName>Change Ownership</fullName>
                </value>
                <value>
                    <fullName>Change Package</fullName>
                </value>
                <value>
                    <fullName>Change Password</fullName>
                </value>
                <value>
                    <fullName>Change Shipping Type</fullName>
                </value>
                <value>
                    <fullName>Change State</fullName>
                </value>
                <value>
                    <fullName>Check out process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason1__c</fullName>
        <description>Categories to group the list of reasons why a customer would call.</description>
        <label>Reason For Contact Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM-Additional Product</fullName>
                </value>
                <value>
                    <fullName>Document - Error</fullName>
                </value>
                <value>
                    <fullName>Document - Shipping</fullName>
                </value>
                <value>
                    <fullName>Feedback (No Issue)</fullName>
                </value>
                <value>
                    <fullName>Order - Billing</fullName>
                </value>
                <value>
                    <fullName>Order - Status</fullName>
                </value>
                <value>
                    <fullName>Order - Update Account or Contact</fullName>
                </value>
                <value>
                    <fullName>Order - Update or Cancel</fullName>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Product Instructions or Execution</fullName>
                </value>
                <value>
                    <fullName>Product Question</fullName>
                </value>
                <value>
                    <fullName>Web Site - Technical Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Contact_Notes__c</fullName>
        <label>Reason for Contact Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>